# ACS_Hw4

ACS_HW1/: README.md  docker-compose.yml
ACS_HW1/ACS_Hw1/ACS_Hw1/: CMakeLists.txt  cast.asm  cast.lst  complex_number.c  complex_number.h  container.c  container.h  data.h  extdata.h  fraction.c  fraction.h  main.c  makefile  number.c  number.h  polar.c  polar.h  rnd.c  rnd.h  task
ACS_HW1/ACS_Hw1/ACS_Hw1_Description/: Description.txt
ACS_HW1/ACS_Hw1/ACS_Hw1_Results/: out1.txt  out2.txt
ACS_HW1/ACS_Hw1/ACS_Hw1_Tests/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
